2012-03-21  1.2
    * Respect WorldGuard protection
    * Add spawnersUnstackable config option (default false) 
    * Add mob and entity IDs from Rancraft Penguins 1.1c in config.yml

2012-03-11  1.1a
    * Add ocelot and iron golem
    * Tested on 1.2.3-R0.2, 1.1-R8, and 1.1-R4

2012-03-03  1.1
    * Update for new API
    * Craftable spawners supported on: CraftBukkit 1.2.3-R0.1, 1.1-R7, 1.1-R4
     (not on 1.1-R6, due to BUKKIT-602)

2012-02-26  1.0.1
    * Fix NPE when using /ss to view type of non-standard spawners
    * Tested with CraftBukkit 1.1-R5 (1961 development build)
    
2012-02-26  1.0
    * Change default destroyDropEgg to false in config.yml
    * Change command to /silkspawners, add /spawner and /ss aliases
    * Preserve comments in config.yml
    * Remove workaround for BUKKIT-602 since its fixed in 1.1-R4
    * Remove workaround for Material.MONSTER_EGG since its fixed in 1.1-R4 ModLoaderMP 1.1r3
    * Remove dependence on CreatureType 
    * Add /ss all to list all creature types
    * Add /ss [creature]egg to get a free spawn egg item, as opposed to a spawner box
    * Add silkspawners.freeitemegg permission
    * Add minSilkTouchLevel config option, to control Silk Touch enchantment requirement
    * Add support for custom mobs
    * Add mob and entity IDs from Natural Selection mod
    * Compile for CraftBukkit 1.1-R4

2012-02-08  0.5
    * Add clicking spawner with spawn egg to change type (by default, ops only)
    * Add option to consume spawn egg when clicking spawner to change type
    * Add silkspawners.changetypewithegg permission node
    * Compatibility with modded craftbukkits missing Material.MONSTER_EGG [1.1-R3 ModLoaderMP 1.1r2]
      (craftableSpawners will be disabled, but otherwise everything should work,
      including spawn egg drops - please report any problems)

2012-02-07  0.4.1
    * Ignore cancelled events

2012-02-05  0.4